refactor: add ProjectSector enum